# libcfp

./: .gitignore  CMakeLists.txt  ChangeLog.txt  README  README.md  README.txt  index.html
doc_full/html/: annotated.html  cfp_8h.html  cfp_8h__incl.map  cfp_8h__incl.md5  cfp_8h_source.html  classcfp_1_1ChemicalElement.html  classcfp_1_1ChemicalElementInterface.html  classcfp_1_1CompoundElement.html  classcfp_1_1CompoundElementInterface.html  classcfp_1_1ElementGroup.html  classcfp_1_1Error.html  classcfp_1_1ErrorDecimBetwInt.html  classcfp_1_1ErrorInvalidChar.html  classcfp_1_1ErrorLoneClosingBracket.html  classcfp_1_1ErrorLoneNucleonNum.html  classcfp_1_1ErrorMaxNesting.html  classcfp_1_1ErrorMissingClosingBracket.html  classcfp_1_1ErrorStartWithCoef.html  classcfp_1_1ErrorSymBegLowChar.html  classcfp_1_1Parser.html  classcfp_1_1ParserState.html  classcfp_1_1Token.html  classes.html  dir_000003_000001.html  dir_000004_000002.html  dir_0074e47e2414e96567eea71bb41cefe4.html  dir_0074e47e2414e96567eea71bb41cefe4_dep.map  dir_0074e47e2414e96567eea71bb41cefe4_dep.md5  dir_09bc9b8a02157fb0c82cb316c334e062.html  dir_09bc9b8a02157fb0c82cb316c334e062_dep.map  dir_09bc9b8a02157fb0c82cb316c334e062_dep.md5  dir_13eb5c62bfeb3b37c12c9f2eea58f22c.html  dir_13eb5c62bfeb3b37c12c9f2eea58f22c_dep.md5  dir_2813037c7036b5ada54caa011a58dc46.html  dir_58d102346cba56a6bc1b0a83da5d7d7b.html  dir_58d102346cba56a6bc1b0a83da5d7d7b_dep.map  dir_58d102346cba56a6bc1b0a83da5d7d7b_dep.md5  dir_74165e75b070ff818dd27c9ffc5c5861.html  dir_75e4bae1f39bcd1d02044fd4452d71a9.html  dir_75e4bae1f39bcd1d02044fd4452d71a9_dep.map  (+103 more)
doc_user/html/: annotated.html  cfp_8h_source.html  classcfp_1_1ChemicalElement.html  classcfp_1_1ChemicalElementInterface.html  classcfp_1_1CompoundElement.html  classcfp_1_1CompoundElementInterface.html  classcfp_1_1Error.html  classcfp_1_1ErrorDecimBetwInt.html  classcfp_1_1ErrorInvalidChar.html  classcfp_1_1ErrorLoneClosingBracket.html  classcfp_1_1ErrorLoneNucleonNum.html  classcfp_1_1ErrorMaxNesting.html  classcfp_1_1ErrorMissingClosingBracket.html  classcfp_1_1ErrorStartWithCoef.html  classcfp_1_1ErrorSymBegLowChar.html  classcfp_1_1Parser.html  classes.html  dir_0074e47e2414e96567eea71bb41cefe4.html  dir_0074e47e2414e96567eea71bb41cefe4_dep.map  dir_0074e47e2414e96567eea71bb41cefe4_dep.md5  dir_09bc9b8a02157fb0c82cb316c334e062.html  dir_13eb5c62bfeb3b37c12c9f2eea58f22c.html  dir_13eb5c62bfeb3b37c12c9f2eea58f22c_dep.map  dir_2813037c7036b5ada54caa011a58dc46.html  dir_2813037c7036b5ada54caa011a58dc46_dep.map  dir_2813037c7036b5ada54caa011a58dc46_dep.md5  dir_58d102346cba56a6bc1b0a83da5d7d7b.html  dir_58d102346cba56a6bc1b0a83da5d7d7b_dep.map  dir_58d102346cba56a6bc1b0a83da5d7d7b_dep.md5  dir_74165e75b070ff818dd27c9ffc5c5861.html  dir_74165e75b070ff818dd27c9ffc5c5861_dep.map  dir_74165e75b070ff818dd27c9ffc5c5861_dep.md5  dir_75e4bae1f39bcd1d02044fd4452d71a9.html  dir_7fafd97160a629d8a3bbe781b2afb806.html  dir_7fafd97160a629d8a3bbe781b2afb806_dep.map  dir_7fafd97160a629d8a3bbe781b2afb806_dep.md5  dir_b3672712c99ebe02c9d88fa024848f89.html  dir_b3672712c99ebe02c9d88fa024848f89_dep.map  dir_d6ab1b1bd1b12c8417b640de35f5f7dc.html  dir_d6ab1b1bd1b12c8417b640de35f5f7dc_dep.map  (+28 more)
include/cfp/: cfp.h  error.h
src/: CMakeLists.txt  Doxyfile_full  Doxyfile_user  element.cpp  element.h  elementgroup.cpp  elementgroup.h  error.cpp  parser.cpp  parserdetails.cpp  parserstate.cpp  parserstate.h  token.cpp  token.h
src/adobe/: asl_1.0.42_changes.patch  forest.hpp
src/doc/: doc_mainpage.h  footer.html
tests/: CMakeLists.txt  test_auto.cpp  test_auto_element.cpp  test_auto_error.cpp  test_auto_parser.cpp  test_manual.cpp
